--- a/src/CoHAN_Navigation/cohan_navigation/config/stage_pr2_move_base_config/robot/hateb_local_planner_params.yaml
+++ b/src/CoHAN_Navigation/cohan_navigation/config/stage_pr2_move_base_config/robot/hateb_local_planner_params.yaml
@@ -16,10 +16,10 @@ disable_warm_start: True
 shrink_horizon_backup: True
 
 # Robot
-holonomic_robot: False
+holonomic_robot: true
 type: 0 #(0: Robot, 1: Human)
-max_vel_y: 0.0
-acc_lim_y: 0.0
+max_vel_y: 0.7
+acc_lim_y: 0.3
 max_vel_x: 0.7
 min_vel_x: 0.02
 max_vel_x_backwards: 0.4
@@ -51,8 +51,8 @@ max_agent_vel_theta: 1.1
 agent_acc_lim_x: 0.6
 agent_acc_lim_y: 0.3
 agent_acc_lim_theta: 0.8
-use_external_prediction: True
-predict_agent_behind_robot: True
+use_external_prediction: False
+predict_agent_behind_robot: False
 predict_agent_goal: False
 agent_robot_ttc_scale_alpha: 1.0
 agent_robot_ttcplus_scale_alpha: 1.0
@@ -73,7 +73,7 @@ ttcplus_threshold: 5.0
 ttcplus_timer: 1.0
 rel_vel_cost_threshold: 1.5
 visibility_cost_threshold: 2.5
-invisible_human_threshold: 2.0
+invisible_human_threshold: 1.0
 min_agent_robot_dist: 0.6
 
 # GoalTolerance
@@ -87,7 +87,7 @@ include_costmap_obstacles: True
 costmap_obstacles_behind_robot_dist: 0.5
 obstacle_poses_affected: 1
 costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSRANSAC"
-costmap_converter_spin_thread: False
+costmap_converter_spin_thread: True
 costmap_converter_rate: 10
 obstacle_cost_mult: 1.0
 use_nonlinear_obstacle_penalty: True
@@ -121,7 +121,7 @@ weight_agent_acc_lim_x: 2
 weight_agent_acc_lim_y: 2
 weight_acc_lim_theta: 1
 weight_agent_acc_lim_theta: 2
-weight_kinematics_nh: 1000.0
+weight_kinematics_nh: 1.0
 weight_kinematics_forward_drive: 1.0
 weight_kinematics_turning_radius: 0
 weight_optimaltime: 1.0
@@ -130,29 +130,16 @@ weight_obstacle: 50.0
 weight_dynamic_obstacle: 50
 weight_viapoint: 0.05
 weight_agent_viapoint: 0.5
-weight_agent_robot_safety: 2.0
+weight_agent_robot_safety: 5.0
 weight_agent_agent_safety: 2.0
 weight_agent_robot_ttc: 1.0
 weight_agent_robot_rel_vel: 5.0
 weight_agent_robot_ttcplus: 1.0
 weight_agent_robot_visibility: 5.0
-weight_invisible_human: 2.0
+weight_invisible_human: 1.0
 weight_shortest_path: 1.0
 selection_alternative_time_cost: False
 cap_optimaltime_penalty: True
-
-# Homotopy Class Planner
-enable_homotopy_class_planning: False
-enable_multithreading: True
-simple_exploration: True
-max_number_classes: 4
-roadmap_graph_no_samples: 15
-roadmap_graph_area_width: 5
-h_signature_prescaler: 0.5
-h_signature_threshold: 0.1
-obstacle_keypoint_offset: 0.1
-obstacle_heading_threshold: 0.45
-visualize_hc_graph: True
 
 # Visualization
 pose_array_z_scale: 0.5
@@ -165,7 +152,3 @@ publish_robot_local_plan: true
 publish_robot_local_plan_fp_poses: true
 publish_robot_local_plan_poses: true
 
-# approach
-approach_id: 1
-approach_dist: 1.0
-approach_angle: 3.14
