added the updated BT submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,4 @@
 
+[submodule "src/3rdparty/BehaviorTree.CPP"]
+	path = src/3rdparty/BehaviorTree.CPP
+	url = https://github.com/sphanit/BehaviorTree.CPP.git
