updated gitignore and added the missing files

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 *__pycache__*
 *.pyc
-*build*
-*.cache*
-*log*
+*build/*
+*.cache/*
+*log/*
 *docs/*docs*
 /install/
-*devel*
-*logs*
+*devel/*
+*logs/*
 *.catkin_tools*
 
