--- a/src/cohan_tutorial/package.xml
+++ b/src/cohan_tutorial/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>cohan_tutorial</name>
   <version>0.0.1</version>
   <description>configuration and launch files for cohan_tutorial</description>
@@ -13,19 +13,9 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <!-- ROS1 dependencies -->
-  <build_depend>rospy</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf2_ros</build_depend>
-
-  <run_depend>rospy</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>tf2_ros</run_depend>
+  <depend>rospy</depend>
 
   <!-- Python dependencies -->
-  <run_depend>python-yaml</run_depend>
+  <depend>python-yaml</depend>
 
 </package>
