fixed license in packages.xml and some small updates

--- a/src/cohan2.0_navigation/simulators/cohan_sim/package.xml
+++ b/src/cohan2.0_navigation/simulators/cohan_sim/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>
   <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>
-  <license>BSD</license>
+  <license>MIT</license>
 
   <build_depend>ros_environment</build_depend>
 
