--- a/src/agent_path_prediction/package.xml
+++ b/src/agent_path_prediction/package.xml
@@ -9,7 +9,7 @@
   <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>
   <author email="harmish@laas.fr">harmish khambhaita</author>
 
-  <license>BSD</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>dynamic_reconfigure</build_depend>
