--- a/src/cohan2.0_navigation/cohan_sim_navigation/package.xml
+++ b/src/cohan2.0_navigation/cohan_sim_navigation/package.xml
@@ -8,7 +8,7 @@
 
   <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>
 
-  <license>BSD</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
