--- a/src/cohan_layers/package.xml
+++ b/src/cohan_layers/package.xml
@@ -8,7 +8,7 @@
 
   <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>
 
-  <license>BSD</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>costmap_2d</build_depend>
