--- a/src/cohan_msgs/package.xml
+++ b/src/cohan_msgs/package.xml
@@ -7,9 +7,8 @@
   <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>
 
   <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>
-  <author email="harmish@laas.fr">harmish khambhaita</author>
 
-  <license>BSD</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
