--- a/src/cohan2.0_navigation/cohan_multiverse_navigation/config/robot/hateb_local_planner_params.yaml
+++ b/src/cohan2.0_navigation/cohan_multiverse_navigation/config/robot/hateb_local_planner_params.yaml
@@ -18,27 +18,20 @@ shrink_horizon_backup: True
 # Robot
 holonomic_robot: false
 type: 0 #(0: Robot, 1: Human)
-robot_radius: 0.47
-max_vel_y: 0.7
-acc_lim_y: 0.3
-max_vel_x: 0.7
+robot_radius: 0.27
+max_vel_x: 0.7 # Can go upto 1 m/s
 min_vel_x: 0.02
 max_vel_x_backwards: 0.4
-max_vel_theta: 1.2
+acc_lim_x: 1.2 # Max possible acceleration in m/s^2 for Tiago
+max_vel_y: 0.0
+acc_lim_y: 0.0
+max_vel_theta: 1.2 # Can go upto 1.5 rad/s
 min_vel_theta: 0.1
-acc_lim_x: 0.3
-acc_lim_theta: 0.4
+acc_lim_theta: 2.5 # Max possible angular acceleration in rad/s^2 for Tiago
 min_turning_radius: 0.0
-footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
+footprint_model:
   type: "circular"
-  radius: 0.34 # for type "circular"
-  line_start: [-0.3, 0.0] # for type "line"
-  line_end: [0.3, 0.0] # for type "line"
-  front_offset: 0.2 # for type "two_circles"
-  front_radius: 0.2 # for type "two_circles"
-  rear_offset: 0.2 # for type "two_circles"
-  rear_radius: 0.2 # for type "two_circles"
-  vertices: [[-0.325, -0.325], [-0.325, 0.325], [0.325, 0.325], [0.46, 0.0], [0.325, -0.325]] # for type "polygon"
+  radius: 0.27 # for type "circular"
 
 # Agents
 ## Agent Model Params
@@ -107,8 +100,8 @@ weight_agent_acc_lim_x: 2
 weight_agent_acc_lim_y: 2
 weight_acc_lim_theta: 1
 weight_agent_acc_lim_theta: 2
-weight_kinematics_nh: 1.0
-weight_kinematics_forward_drive: 1.0
+weight_kinematics_nh: 1000.0
+weight_kinematics_forward_drive: 100.0
 weight_kinematics_turning_radius: 0
 weight_optimaltime: 1.0
 weight_agent_optimaltime: 3.0
