--- a/src/cohan2.0_navigation/cohan_multiverse_navigation/config/robot/local_costmap_params.yaml
+++ b/src/cohan2.0_navigation/cohan_multiverse_navigation/config/robot/local_costmap_params.yaml
@@ -18,8 +18,8 @@ plugins:
   - {name: human_layer_visible, type: "cohan_layers::AgentVisibilityLayer"}
 
 obstacles:
-  observation_sources: base_scan
-  base_scan: {data_type: LaserScan, topic: laser_scan, expected_update_rate: 0.3, marking: true, clearing: true, frame_id: laser_mount}
+  observation_sources: base_scan_filtered
+  base_scan_filtered: {data_type: LaserScan, topic: base_scan_filtered, expected_update_rate: 0.3, marking: true, clearing: true}
   footprint_clearing_enabled: true
   track_unknown_space: true
 inflater:
