crossing info publication added

--- a/src/cohan_msgs/CMakeLists.txt
+++ b/src/cohan_msgs/CMakeLists.txt
@@ -37,6 +37,7 @@ add_message_files(DIRECTORY msg
   PointArray.msg
   PassageType.msg
   Predictions.msg
+  CrossingInfo.msg
 )
 
 add_service_files(
