--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,4 +12,30 @@
     ],
     "C_Cpp.intelliSenseEngine": "disabled",
     "cmake.configureOnOpen": false,
+    "python.autoComplete.extraPaths": [
+        "/opt/ros/noetic/lib/python3/dist-packages",
+        "",
+        "/usr/lib/python3/dist-packages",
+        "/usr/local/webots/lib/controller/python",
+        "/usr/bin/python3.6",
+        "/opt/ros/noetic/lib/python3.7/dist-packages",
+        "/usr/local/lib/python3.6/dist-packages/",
+        "/usr/local/robots/pynaoqi-python2.7-2.5.5.5-linux64/lib/python2.7/site-packages",
+        "/home/phani/openrobots_ws/lib/python2.7/site-packages",
+        "/home/phani/openrobots_ws/lib/python3.8/site-packages",
+        "/home/phani/ros_ws/current_active/awarebot_ws/src/CAMM/CAMM/src"
+    ],
+    "python.analysis.extraPaths": [
+        "/opt/ros/noetic/lib/python3/dist-packages",
+        "",
+        "/usr/lib/python3/dist-packages",
+        "/usr/local/webots/lib/controller/python",
+        "/usr/bin/python3.6",
+        "/opt/ros/noetic/lib/python3.7/dist-packages",
+        "/usr/local/lib/python3.6/dist-packages/",
+        "/usr/local/robots/pynaoqi-python2.7-2.5.5.5-linux64/lib/python2.7/site-packages",
+        "/home/phani/openrobots_ws/lib/python2.7/site-packages",
+        "/home/phani/openrobots_ws/lib/python3.8/site-packages",
+        "/home/phani/ros_ws/current_active/awarebot_ws/src/CAMM/CAMM/src"
+    ],
 }
