--- a/src/invisible_humans_detection/package.xml
+++ b/src/invisible_humans_detection/package.xml
@@ -15,6 +15,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>cohan_msgs</build_depend>
+  <build_depend>costmap_conveter</build_depend>
   <build_export_depend>angles</build_export_depend>
   <build_export_depend>costmap_2d</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
@@ -22,6 +23,7 @@
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>cohan_msgs</build_export_depend>
+  <build_export_depend>costmap_conveter</build_export_depend>
   <exec_depend>angles</exec_depend>
   <exec_depend>costmap_2d</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
@@ -29,5 +31,6 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>cohan_msgs</exec_depend>
+  <exec_depend>costmap_converter</exec_depend>
 
 </package>
